--- a/WebContent/css/pages.css
+++ b/WebContent/css/pages.css
@@ -206,7 +206,7 @@ body {
 	padding-top:10px;
 	height:20px;
 }
-#left .styled-select  select{
+.styled-select  select{
    background: transparent;
    padding: 5px;
    font-size: 16px;
@@ -218,32 +218,15 @@ body {
 	font-size:20px;
    -webkit-appearance: none;
    }
-#left .styled-select {
-	width:380px;
+.styled-select {
+	width:690px;
    height: 43px;
-   margin-left:10px;  
+   background-color:white;
    overflow: hidden;
-   background: url('../images/arrow.jpg') no-repeat right #ddd;
+   border:1px solid #B9BABB;
+   background: url('../images/arrow.jpg') no-repeat right white;
    }
-#left .styled-select2  select{
-   background: transparent;
-   padding: 5px;
-   font-size: 16px;
-   line-height: 1;
-   border: 0;
-   height: 43px;
-   border-radius: 0;
-	width:550px;
-	font-size:20px;
-   -webkit-appearance: none;
-   }
-#left .styled-select2 {
-	width:550px;
-   height: 43px;
-   margin-left:10px;  
-   overflow: hidden;
-   background: url('../images/arrow.jpg') no-repeat right #ddd;
-   }
+
 #bg_body #right
 {
 	float:left;
@@ -472,6 +455,7 @@ a.menu_gestion2:hover {
 	text-align:center;
 	  display: block;
   margin-left: auto;
+  
   margin-right: auto;
 }
 a {
@@ -583,6 +567,32 @@ text-decoration:underline;
 	padding-top:20px;
 	text-align:center;
 }
+.button {
+	width:253px;
+	height:26px;
+	padding:10px;
+	padding-top:15px;
+	background-color:#99d5be;
+	color:white;
+	font-size:16px;
+	text-align:center;
+	font-weight:bold;
+	margin:auto;
+	 border-radius: 5px;
+}
+.erreur {
+ color: #900 !important;
+ font-family: "Verdana", arial;
+ font-size:11px;
+}
+.button:hover {
+	background-color:#60af91;
+}
+.title {
+	font-size:25px;
+	text-transform:uppercase;
+	text-align:center;
+}
 a {
 	color:#516371;
 	font-family: "Verdana",Arial;
@@ -595,4 +605,11 @@ a:hover
 }
 a img {
  border:none;
+}
+ .tableaux3
+{
+	font-size: 11px;
+	border: solid 1px #6FBB62;
+	color: #4C8914;
+	background-color: #DCFFBF;
 }
